Actualizacion de Nro de Control en adicionales de Sucursal

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "APIProfit2K8": {
