Corrección de validación de sucursal cliene proveedor

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "ProfitAdmin2K8": "Server=DESKTOP-9RKQG9O;Database=demo;User Id=profit;Password=profit;"
+    "ProfitAdmin2K8": "Server=S01WDPROFIT01;Database=demo;User Id=profit;Password=profit;"
     //"ProfitAdmin2K8": "Server=S01WDPROFIT01;Database=demo;User Id=profit;Password=profit;"
   },
   "AllowedHosts": "*"
