Optimización de conexion a SQL Server

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,9 @@
     }
   },
   "ConnectionStrings": {
-    "ProfitAdmin2K8": "Server=S01WDPROFIT01;Database=demo;User Id=profit;Password=profit;"
+    "ProfitAdmin2K8": "Server=DESKTOP-9RKQG9O;Database=demo;User Id=profit;Password=profit;"
     //"ProfitAdmin2K8": "Server=S01WDPROFIT01;Database=demo;User Id=profit;Password=profit;"
   },
+  "Servidor": "DESKTOP-9RKQG9O",
   "AllowedHosts": "*"
 }
