--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "ProfitAdmin2K8": "Server=S01WPPRF03;Database=demo;User Id=profit;Password=profit;"
-    //"ProfitAdmin2K8": "Server=S01WDPROFIT01;Database=demo;User Id=profit;Password=profit;"
+    //"ProfitAdmin2K8": "Server=S01WPPRF03;Database=demo;User Id=profit;Password=profit;"
+    "ProfitAdmin2K8": "Server=S01WDPROFIT01;Database=demo;User Id=profit;Password=profit;"
   },
   "Servidor": "S01WPPRF03",
   "AllowedHosts": "*"
