--- a/appsettings.json
+++ b/appsettings.json
@@ -7,9 +7,11 @@
     }
   },
   "ConnectionStrings": {
-    //"ProfitAdmin2K8": "Server=S01WPPRF03;Database=demo;User Id=profit;Password=profit;"
-    "ProfitAdmin2K8": "Server=S01WDPROFIT01;Database=demo;User Id=profit;Password=profit;"
+    //"ProfitAdmin2K8": "Server=DESKTOP-9RKQG9O;Database=demo;User Id=profit;Password=profit;"
+    //"ProfitAdmin2K8": "Server=S01WDPROFIT01;Database=demo;User Id=profit;Password=profit;"
+    "ProfitAdmin2K8": "Server=DESKTOP-9RKQG9O;Database=demo;User Id=profit;Password=profit;"
+
   },
-  "Servidor": "S01WPPRF03",
+  "Servidor": "DESKTOP-9RKQG9O",
   "AllowedHosts": "*"
 }
